# knotnpunkt

./: .dockerignore  .gitignore  .yarnrc  Dockerfile  README.md  alembic.ini  database-test.db  database.db  dbModel.py  docker-compose.debug.yml  docker-compose.yml  package.json  pyproject.toml  requirements.txt  setup.py  test.db  testing.py
.github/: CONTRIBUTING.md
alembic/versions/: 1a43cd32167a_lagerreferenz_entfernen.py  74e60d62286a_restliche_tabellen_erstellen.py  bd6a7304874b_apps_hinzufuegen.py  ca7e52a919c6_benutzer_erstellen.py  cc86d7735a89_rollen_entität_erstellen.py  f57f6b23f98e_lager_entfernen.py
database/: database_model.mwb
db/: env.py  seeds.py
docs/: index.md  installation.md  login.md
knotnpunkt/: __init__.py  _update.py  api.py  app.py  models.py  ui_endpoints.py  utils.py  views.py
knotnpunkt/api/: __init__.py  api.py  auslagen.py
knotnpunkt/database/: __init__.py  database_model.mwb.bak  db.py  json_encoder.py  setup.py
knotnpunkt/export/: export_templates.json  file_generators.py
knotnpunkt/frontend/: package-lock.json  package.json
knotnpunkt/site/: __init__.py  material.py  user.py  views.py
knotnpunkt/static/: knotnpunkt.webmanifest
knotnpunkt/templates/: auslagen.html  base.html  benutzer.html  home.html  kalender.html  login.html  material.html  material_details.html  profil.html  qrgenerator.html  scanner.html
migrations/: env.py  seeds.py
migrations/versions/: 25402355d8fd_add_anzeigename_for_auslagenkategorie.py  26a50766a9eb_initial_revision.py  e3268463fd63_add_auslagen.py  (+2 more)
webapp/: app.py
(+37 files in other folders)
