[tool.poetry]
name = "knotnpunkt"
version = "0.1.0"
description = ""
authors = ["swssl <81415137+swssl@users.noreply.github.com>", "Jonah Wille <jonah.wille10@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
flask = "^3.0.3"
flask-login = "^0.6.3"
alembic = "^1.13.1"
python-dotenv = "^1.0.1"
flask-sqlalchemy = "^3.1.1"
humanize = "^4.9.0"
segno = "^1.6.1"
cairosvg = "^2.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
